Revert "Fix wrong pacman.conf format"
This reverts commit a99258deba092954e6356e99062db3faff359282.

--- a/pacman/pacman.conf
+++ b/pacman/pacman.conf
@@ -20,9 +20,7 @@ HoldPkg     = pacman glibc
 #XferCommand = /usr/bin/wget --passive-ftp -c -O %o %u
 #CleanMethod = KeepInstalled
 Architecture = auto
-# Enable paralel downloads
-ParallelDownloads = 3 
-
+ParallelDownloads = 3 # Enable paralel downloads
 
 # Pacman won't upgrade packages listed in IgnorePkg and members of IgnoreGroup
 #IgnorePkg   =
